[Japneet | Jaya] Fix. collapsable

--- a/src/components/RouteLine.css
+++ b/src/components/RouteLine.css
@@ -1,5 +1,5 @@
 .show-station-icon {
-    padding-top: 4%;
+    padding-top: 13%;
 }
 
 .show-station-details {
